<?xml version="1.0" encoding="utf-8"?>

<!--This is the Drawer Layout-->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true">

    <!--This is the toolbar-->
    <include
        android:id="@+id/layoutToolbar"
        layout="@layout/tool_bar" />

    <!--This is the content-->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <TextView
            android:id="@+id/textView_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_toLeftOf="@+id/buttonSaveUserAccountDetail"
            android:layout_toStartOf="@+id/buttonSaveUserAccountDetail"
            android:text="FirstName:"
            android:textSize="20dp"
            android:textStyle="normal|bold|italic" />

        <EditText
            android:id="@+id/etUserAccountDetailFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView_firstname"
            android:layout_toRightOf="@+id/textView_firstname"
            android:ems="10"
            android:hint="Enter Your First Name"
            android:inputType="textPersonName"
            android:textStyle="normal|bold|italic"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView_firstname"
            android:layout_alignStart="@+id/textView_firstname"
            android:layout_below="@+id/etUserAccountDetailFirstName"
            android:layout_marginTop="30dp"
            android:text="LastName:"
            android:textSize="20dp"
            android:textStyle="normal|bold|italic" />

        <EditText
            android:id="@+id/etUserAccountDetailLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView_lastname"
            android:layout_alignLeft="@+id/etUserAccountDetailFirstName"
            android:layout_alignStart="@+id/etUserAccountDetailFirstName"
            android:layout_below="@+id/etUserAccountDetailFirstName"
            android:ems="10"

            android:hint="Enter Your Last Name"
            android:inputType="textPersonName"
            android:textStyle="normal|bold|italic"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView_lastname"
            android:layout_alignStart="@+id/textView_lastname"
            android:layout_below="@+id/etUserAccountDetailLastName"
            android:layout_marginTop="30dp"
            android:text="Address:"
            android:textSize="20dp"
            android:textStyle="normal|bold|italic" />

        <EditText
            android:id="@+id/etUserAccountDetailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView_address"
            android:layout_alignBottom="@+id/textView_address"
            android:layout_alignLeft="@+id/etUserAccountDetailLastName"
            android:layout_alignStart="@+id/etUserAccountDetailLastName"
            android:ems="10"
            android:hint="Enter Your Address"
            android:inputType="textMultiLine"
            android:textStyle="normal|bold|italic"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView_address"
            android:layout_alignStart="@+id/textView_address"
            android:layout_below="@+id/etUserAccountDetailAddress"
            android:layout_marginTop="30dp"
            android:text="Age:"
            android:textSize="20dp"
            android:textStyle="normal|bold|italic" />

        <EditText
            android:id="@+id/etUserAccountDetailAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView_age"
            android:layout_alignBottom="@+id/textView_age"
            android:layout_alignLeft="@+id/etUserAccountDetailAddress"
            android:layout_alignStart="@+id/etUserAccountDetailAddress"
            android:ems="10"
            android:hint="Enter Your Age"
            android:inputType="number"
            android:textStyle="normal|bold|italic"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvUserAccountFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView_firstname"
            android:layout_toEndOf="@+id/textView_firstname"
            android:layout_toRightOf="@+id/textView_firstname"
            android:text="First Name" />

        <TextView
            android:id="@+id/tvUserAccountLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView_lastname"
            android:layout_alignLeft="@+id/etUserAccountDetailFirstName"
            android:layout_alignStart="@+id/etUserAccountDetailFirstName"
            android:layout_below="@+id/etUserAccountDetailFirstName"
            android:text="Lase Name" />

        <TextView
            android:id="@+id/tvUserAccountAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView_address"
            android:layout_alignBottom="@+id/textView_address"
            android:layout_alignLeft="@+id/etUserAccountDetailLastName"
            android:layout_alignStart="@+id/etUserAccountDetailLastName"
            android:text="Address" />

        <TextView
            android:id="@+id/tvUserAccountAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView_age"
            android:layout_alignBottom="@+id/textView_age"
            android:layout_alignLeft="@+id/etUserAccountDetailAddress"
            android:layout_alignStart="@+id/etUserAccountDetailAddress"
            android:text="Age" />

        <Button
            android:id="@+id/buttonSaveUserAccountDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonForSave"
            android:text="Save"

            android:layout_marginBottom="17dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <Button
            android:id="@+id/buttonEditUserAccountDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonForEdit"
            android:text="Edit"
            android:layout_alignBaseline="@+id/buttonSaveUserAccountDetail"
            android:layout_alignBottom="@+id/buttonSaveUserAccountDetail"
            android:layout_toLeftOf="@+id/buttonSaveUserAccountDetail"
            android:layout_toStartOf="@+id/buttonSaveUserAccountDetail"
            android:layout_marginRight="13dp" />

        <Button
            android:id="@+id/buttonLogOutUserAccountDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonForLogOut"
            android:text="Log Out"
            android:layout_alignBaseline="@+id/buttonSaveUserAccountDetail"
            android:layout_alignBottom="@+id/buttonSaveUserAccountDetail"
            android:layout_toRightOf="@+id/buttonSaveUserAccountDetail"
            android:layout_toEndOf="@+id/buttonSaveUserAccountDetail"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp" />

    </RelativeLayout>

    <!-- The navigation drawer list-->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@color/cardview_light_background" />

</android.support.v4.widget.DrawerLayout>
