...
        android:layout_alignBottom="@+id/textView_name"
        android:layout_toRightOf="@+id/textView_name"
        android:layout_toEndOf="@+id/textView_name"
        android:hint="Enter your name" />

    <TextView
        android:text="address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_address"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/editTextName"
...
